# rnn-sequence-classification-platform

./: .dockerignore  .gitattributes  Makefile  docker-compose.yaml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.dvc/: config
data/: raw.dvc
docker/: Dockerfile
notebooks/: checking_stuff.ipynb  eda-ghc.ipynb  eda-jtc.ipynb  eda-twitter.ipynb
pytorch-end-to-end/: main.py
pytorch_end_to_end/: entrypoint.py  version_data.py
pytorch_end_to_end/config_schemas/: config_schema.py
pytorch_end_to_end/utils/: __init__.py  config_utils.py  data_utils.py
src/: process_data.py  version_data.py
src/config_schemas/: config_schema.py  data_processing_config_schema.py  dvc_config_schema.py
src/config_schemas/data_processing/: dataset_cleaner_schema.py  dataset_reader_schema.py  dataset_readers_schema.py
src/config_schemas/infrastructure/: gcp_schema.py
src/configs/: config.yaml
src/configs/hydra/job_logging/: custom.yaml
src/configs/process_data/dataset_cleaner_manager/: simple_dataset_cleaner.yaml
src/configs/process_data/dataset_cleaner_manager/dataset_cleaner/: character_limit_300.yaml
src/configs/process_data/dataset_reader_manager/dataset_reader/: ghc.yaml  jtc.yaml  twitter.yaml
src/data_processing/: dataset_cleaners.py  dataset_readers.py
src/utils/: __init__.py  config_utils.py  data_utils.py  gcp_utils.py  utils.py
